// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for AngularMonorepo preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for AngularStandalone preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for Apps preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for Core preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for Empty preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for Expo preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for Express preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for NPM preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for Nest preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for NextJs preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for NodeStandalone preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for ReactMonorepo preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for ReactNative preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for ReactStandalone preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for TS preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for WebComponents preset 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Development server

Run \`nx serve app1\` for a dev server. Navigate to http://localhost:4200/. The app will automatically reload if you change any of the source files.

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles README.md should be created for custom plugins 1`] = `
"# Proj

<a alt=\\"Nx logo\\" href=\\"https://nx.dev\\" target=\\"_blank\\" rel=\\"noreferrer\\"><img src=\\"https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png\\" width=\\"45\\"></a>

✨ **This workspace has been generated by [Nx, a Smart, fast and extensible build system.](https://nx.dev)** ✨

## Understand this workspace

Run \`nx graph\` to see a diagram of the dependencies of the projects.

## Remote caching

Run \`npx nx connect-to-nx-cloud\` to enable [remote caching](https://nx.app) and make CI faster.

## Further help

Visit the [Nx Documentation](https://nx.dev) to learn more.
"
`;

exports[`@nrwl/workspace:generateWorkspaceFiles should recommend vscode extensions (angular) 1`] = `
Array [
  "nrwl.angular-console",
  "esbenp.prettier-vscode",
]
`;

exports[`@nrwl/workspace:generateWorkspaceFiles should recommend vscode extensions 1`] = `
Array [
  "nrwl.angular-console",
  "esbenp.prettier-vscode",
]
`;
